--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.18.2",
     "axios": "^1.5.1",
     "expo": "~49.0.15",
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.5.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
-    "sync-storage": "^0.4.2",
-    "@react-native-async-storage/async-storage": "1.18.2"
+    "sync-storage": "^0.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
